added scones image

--- a/01/start/index.html
+++ b/01/start/index.html
@@ -19,6 +19,9 @@
             Occasionally maligned and misunderstood; the scone is a
             quintessentially British classic.
         </h2>
+
+        <img src="img/scones.jpg" alt="Scones" />
+
         <div class="MoneyShot">
             <p class="ImageCaption">
                 Incredible scones, picture from Wikipedia
