--- a/01/start/index.html
+++ b/01/start/index.html
@@ -5,24 +5,22 @@
     <meta charset="utf-8" />
     <title>Our first responsive web page with HTML5 and CSS</title>
     <meta name="description" content="A basic responsive web page – an example from Chapter 1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=2.0" />
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
     <div class="Header">
         <a href="/" class="LogoWrapper"><img src="img/SOC-Logo.png" alt="Scone O'Clock logo" /></a>
-        <h1 class="Strap">Scones: the most resplendent of snacks</p>
+        <h1 class="Strap">Scones: the most resplendent of snacks</h1>
     </div>
     <div class="IntroWrapper">
         <h2 class="IntroText">
             Occasionally maligned and misunderstood; the scone is a
             quintessentially British classic.
         </h2>
-
-        <img src="img/scones.jpg" alt="Scones" />
-
         <div class="MoneyShot">
+            <img class="MoneyShotImg" src="img/scones.jpg" alt="Incredible scones" />
             <p class="ImageCaption">
                 Incredible scones, picture from Wikipedia
             </p>
